Added support to quit stream from notification

--- a/plugin.xml
+++ b/plugin.xml
@@ -31,8 +31,14 @@
           <service android:name="org.prx.playerhater.PlaybackService">
             <meta-data android:name="org.prx.playerhater.Config" android:resource="@xml/playerhater"></meta-data>
           </service>
+	  <receiver android:name="org.prx.playerhater.BroadcastReceiver">
+            <intent-filter>
+              <action android:name="android.intent.action.MEDIA_BUTTON"/>
+            </intent-filter>
+          </receiver>
         </config-file>
  
+	<source-file src="res/layout-v11/nypr_ph_hc_notification.xml" target-dir="res/layout-v11" />
         <source-file src="src/android/org/nypr/cordova/playerhaterplugin" target-dir="src/org/nypr/cordova" />
         <source-file src="src/android/org/prx/playerhater" target-dir="src/org/prx" />
         <resource-file src="res/android/" target="res" />
